docs/examples/101/aad-domainservices/main.json
{
  "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "metadata": {
    "_generator": {
      "name": "bicep",
      "version": "dev",
      "templateHash": "10379866574080525208"
    }
  },
  "parameters": {
    "domainName": {
      "type": "string",
      "metadata": {
        "description": "Domain Name"
      }
    },
    "location": {
      "type": "string",
      "defaultValue": "[resourceGroup().location]",
      "metadata": {
        "description": "Location for all resources."
      }
    },
    "sku": {
      "type": "string",
      "defaultValue": "Enterprise",
      "metadata": {
        "description": "SKU of the AD Domain Service."
      }
    },
    "domainConfigurationType": {
      "type": "string",
      "defaultValue": "FullySynced",
      "metadata": {
        "description": "Domain Configuration Type."
      }
    },
    "filteredSync": {
      "type": "string",
      "defaultValue": "Disabled",
      "metadata": {
        "description": "Choose the filtered sync type."
      }
    },
    "domainServicesVnetName": {
      "type": "string",
      "defaultValue": "domain-services-vnet",
      "metadata": {
        "description": "Virtual Network Name"
      }
    },
    "domainServicesVnetAddressPrefix": {
      "type": "string",
      "defaultValue": "10.0.0.0/16",
      "metadata": {
        "description": "Address Prefix"
      }
    },
    "domainServicesSubnetName": {
      "type": "string",
      "defaultValue": "domain-services-subnet",
      "metadata": {
        "description": "Virtual Network Name"
      }
    },
    "domainServicesSubnetAddressPrefix": {
      "type": "string",
      "defaultValue": "10.0.0.0/24",
      "metadata": {
        "description": "Subnet prefix"
      }
    }
  },
  "functions": [],
  "variables": {
    "domainServicesNSGName": "[format('{0}-nsg', parameters('domainServicesSubnetName'))]",
    "PSRemotingSlicePIPAddresses": [
      "52.180.179.108",
      "52.180.177.87",
      "13.75.105.168",
      "52.175.18.134",
      "52.138.68.41",
      "52.138.65.157",
      "104.41.159.212",
      "104.45.138.161",
      "52.169.125.119",
      "52.169.218.0",
      "52.187.19.1",
      "52.187.120.237",
      "13.78.172.246",
      "52.161.110.169",
      "52.174.189.149",
      "40.68.160.142",
      "40.83.144.56",
      "13.64.151.161"
    ],
    "RDPIPAddresses": [
      "207.68.190.32/27",
      "13.106.78.32/27",
      "13.106.174.32/27",
      "13.106.4.96/27"
    ],
    "PSRemotingSliceTIPAddresses": [
      "52.180.183.67",
      "52.180.181.39",
      "52.175.28.111",
      "52.175.16.141",
      "52.138.70.93",
      "52.138.64.115",
      "40.80.146.22",
      "40.121.211.60",
      "52.138.143.173",
      "52.169.87.10",
      "13.76.171.84",
      "52.187.169.156",
      "13.78.174.255",
      "13.78.191.178",
      "40.68.163.143",
      "23.100.14.28",
      "13.64.188.43",
      "23.99.93.197"
    ]
  },
  "resources": {
    "nsg": {
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2020-11-01",
      "name": "[variables('domainServicesNSGName')]",
      "location": "[parameters('location')]",
      "properties": {
        "securityRules": [
          {
            "name": "AllowPSRemotingSliceP",
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "5986",
              "sourceAddressPrefixes": "[variables('PSRemotingSlicePIPAddresses')]",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 301,
              "direction": "Inbound"
            }
          },
          {
            "name": "AllowRDP",
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "3389",
              "sourceAddressPrefixes": "[variables('RDPIPAddresses')]",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 201,
              "direction": "Inbound"
            }
          },
          {
            "name": "AllowSyncWithAzureAD",
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "443",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 101,
              "direction": "Inbound"
            }
          },
          {
            "name": "AllowPSRemotingSliceT",
            "properties": {
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "5986",
              "sourceAddressPrefixes": "[variables('PSRemotingSliceTIPAddresses')]",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 302,
              "direction": "Inbound"
            }
          }
        ]
      }
    },
    "vnet": {
      "type": "Microsoft.Network/virtualNetworks",
      "apiVersion": "2020-11-01",
      "name": "[parameters('domainServicesVnetName')]",
      "location": "[parameters('location')]",
      "properties": {
        "addressSpace": {
          "addressPrefixes": [
            "[parameters('domainServicesVnetAddressPrefix')]"
          ]
        }
      }
    },
    "subnet": {
      "type": "Microsoft.Network/virtualNetworks/subnets",
      "apiVersion": "2020-11-01",
      "name": "[format('{0}/{1}', parameters('domainServicesVnetName'), parameters('domainServicesSubnetName'))]",
      "properties": {
        "addressPrefix": "[parameters('domainServicesSubnetAddressPrefix')]",
        "networkSecurityGroup": {
          "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('domainServicesNSGName'))]"
        }
      },
      "dependsOn": [
        "nsg",
        "vnet"
      ]
    },
    "domainServices": {
      "type": "Microsoft.AAD/domainServices",
      "apiVersion": "2020-01-01",
      "name": "[parameters('domainName')]",
      "location": "[parameters('location')]",
      "properties": {
        "domainName": "[parameters('domainName')]",
        "filteredSync": "[parameters('filteredSync')]",
        "domainConfigurationType": "[parameters('domainConfigurationType')]",
        "replicaSets": [
          {
            "subnetId": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('domainServicesVnetName'), parameters('domainServicesSubnetName'))]",
            "location": "[parameters('location')]"
          }
        ],
        "sku": "[parameters('sku')]"
      },
      "dependsOn": [
        "subnet"
      ]
    }
  }
}
